nuevos cambios en mi commit

--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
     Maria Mamani Sullca
 
     turno noche VI semestre
+
+</body>
+
+<body>
+
+    Maria Mamani Sullca
+
+    turno noche VI semestre
     
 </body>
 </html>
