modu}ifique  en mi nuevo  commit

--- a/index.html
+++ b/index.html
@@ -10,15 +10,7 @@
 
     Maria Mamani Sullca
 
-    turno noche VI semestre
+    turno noche VI semestre.
 
-</body>
-
-<body>
-
-    Maria Mamani Sullca
-
-    turno noche VI semestre
-    
 </body>
 </html>
